# docs/swagger.json
@@ -251,7 +251,7 @@
                 }
             }
         },
-        "/api/v1/translations/{targetLang}/{sourceLang}": {
+        "/api/v1/translations": {
             "get": {
                 "description": "Returns nested translation data for the given target and source language ISO codes.",
                 "consumes": [
@@ -267,17 +267,17 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "example": "bn",
-                        "description": "Target language code (ISO 639-1)",
-                        "name": "targetLang",
+                        "example": "de",
+                        "description": "Source language code (ISO 639-1)",
+                        "name": "source_lang",
                         "in": "path",
                         "required": true
                     },
                     {
                         "type": "string",
-                        "example": "de",
-                        "description": "Source language code (ISO 639-1)",
-                        "name": "sourceLang",
+                        "example": "bn",
+                        "description": "Target language code (ISO 639-1)",
+                        "name": "target_lang",
                         "in": "path",
                         "required": true
                     }
